@@ -25,6 +25,7 @@ version <next>:
 - hash and framehash muxers
 - colorspace filter
 - hdcd filter
+- readvitc filter
 
 version 3.0:
 - Common Encryption (CENC) MP4 encoding and decoding support
